--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="root"></div>
-    <script src="bundle.js"></script>
+    <!-- <script src="bundle.js"></script> -->
+    <script src="app.jsx"></script>
 </body>
 </html>
