--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <!-- <script src="bundle.js"></script> -->
-    <script src="app.jsx"></script>
+    <script src="bundle.js"></script>
 </body>
 </html>
